--- a/Videos/index.html
+++ b/Videos/index.html
@@ -137,16 +137,41 @@
             </div>
         </nav>
     </header>
+
     <div id="lower-opacity" class="lower-opacity" onclick="closeSideBar()"></div>
 
     <main id="main">
         <section class="ad">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-            <!-- Home Page Ad Unit -->
-            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <div>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                <!-- Home Page Ad Unit -->
+                <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+
+            <div class="extra"></div>
+
+            <div>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                <!-- Home Page Ad Unit -->
+                <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+
+            <div class="extra"></div>
+
+            <div>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                <!-- Home Page Ad Unit -->
+                <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
         </section>
         <section>
             <div>
@@ -188,6 +213,7 @@
                         <p class="video-title">How to Make BHE Trolling Room (Part 3)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/Arena Scoreboard in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -196,6 +222,7 @@
                         <p class="video-title">How to Make a Working Arena Scoreboard</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/Build Reset Remote in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -204,6 +231,7 @@
                         <p class="video-title">How to Make Build Reset Remote</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/Reboot Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -212,6 +240,7 @@
                         <p class="video-title">How to Make Reboot Mechanic</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/1v1 Arena Scoring System in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -220,6 +249,7 @@
                         <p class="video-title">1v1 Arena Scoring System (Old)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/Team Selector Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -230,6 +260,7 @@
                         </p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE Trolling Room (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -238,6 +269,7 @@
                         <p class="video-title">How to Make BHE Trolling Room (Part 2)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE Trolling Room.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -246,6 +278,7 @@
                         <p class="video-title">How to Make BHE Trolling Room (Part 1)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make Clix Box Fights Map (FULL).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -254,6 +287,7 @@
                         <p class="video-title">How to Make Clix Boxfights Map</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/BHE Start Island.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -262,6 +296,7 @@
                         <p class="video-title">How to Make BHE Start Island</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/BHE Spawn Island (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -270,6 +305,7 @@
                         <p class="video-title">How to Make BHE Spawn Island (Part 2)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/BHE Spawn Island (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -278,6 +314,7 @@
                         <p class="video-title">How to Make BHE Spawn Island (Part 1)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 5).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -286,6 +323,7 @@
                         <p class="video-title">How to Make BHE Boxfights Map (Part 5)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 4).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -294,6 +332,7 @@
                         <p class="video-title">How to Make BHE Boxfights Map (Part 4)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make First Person Mechanic.png" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -304,6 +343,7 @@
                         </p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -312,6 +352,7 @@
                         <p class="video-title">How to Make BHE Boxfights Map (Part 3)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -320,6 +361,7 @@
                         <p class="video-title">How to Make BHE Boxfights Map (Part 2)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -328,6 +370,7 @@
                         <p class="video-title">How to Make BHE Boxfights Map (Part 1)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/Emote to Change Loadout.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -336,6 +379,7 @@
                         <p class="video-title">How to Make Emote to Change Loadout</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 7).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -344,6 +388,7 @@
                         <p class="video-title">How to Make BHE 1v1 Map (Part 7)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 6).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -352,6 +397,7 @@
                         <p class="video-title">How to Make BHE 1v1 Map (Part 6)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 5).png" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -360,6 +406,7 @@
                         <p class="video-title">How to Make BHE 1v1 Map (Part 5)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 4).png" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -368,6 +415,7 @@
                         <p class="video-title">How to Make BHE 1v1 Map (Part 4)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -376,6 +424,7 @@
                         <p class="video-title">How to Make BHE 1v1 Map (Part 3)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 2).png" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -384,6 +433,7 @@
                         <p class="video-title">How to Make BHE 1v1 Map (Part 2)</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 1).png" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -395,12 +445,36 @@
             </div>
         </section>
         <section class="ad">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-            <!-- Home Page Ad Unit -->
-            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <div>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                <!-- Home Page Ad Unit -->
+                <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+
+            <div class="extra"></div>
+
+            <div>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                <!-- Home Page Ad Unit -->
+                <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+
+            <div class="extra"></div>
+
+            <div>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                <!-- Home Page Ad Unit -->
+                <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
         </section>
     </main>
 
