--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <section class="grid-item">
             <h1>GETTING STARTED!</h1>
             <p>Go to the Videos Page.</p>
-            <a href="https://VukeFN.github.io/videos.html">VIDEOS</a>
+            <a href="https://VukeFN.github.io/Videos/">VIDEOS</a>
         </section>
         <section class="grid-item">
             <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" />
