--- a/Videos/index.html
+++ b/Videos/index.html
@@ -141,10 +141,10 @@
     <div id="lower-opacity" class="lower-opacity" onclick="closeSideBar()"></div>
 
     <main id="main">
-        <section class="ad">
+        <section class="ad-desktop1">
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Home Page Ad Unit -->
+                <!-- Videos Page Ad Unit -->
                 <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
@@ -155,7 +155,7 @@
 
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Home Page Ad Unit -->
+                <!-- Videos Page Ad Unit -->
                 <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
@@ -166,7 +166,7 @@
 
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Home Page Ad Unit -->
+                <!-- Videos Page Ad Unit -->
                 <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
@@ -214,6 +214,15 @@
                     </a>
                 </div>
 
+                <div class="ad-mobile1">
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                    <!-- Videos Page Ad Unit -->
+                    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/Arena Scoreboard in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -248,6 +257,15 @@
                     <a href="#">
                         <p class="video-title">1v1 Arena Scoring System (Old)</p>
                     </a>
+                </div>
+
+                <div class="ad-mobile1">
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                    <!-- Videos Page Ad Unit -->
+                    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </div>
 
                 <div class="video">
@@ -288,6 +306,15 @@
                     </a>
                 </div>
 
+                <div class="ad-mobile1">
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                    <!-- Videos Page Ad Unit -->
+                    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/BHE Start Island.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -322,6 +349,15 @@
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 5)</p>
                     </a>
+                </div>
+
+                <div class="ad-mobile1">
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                    <!-- Videos Page Ad Unit -->
+                    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </div>
 
                 <div class="video">
@@ -362,6 +398,15 @@
                     </a>
                 </div>
 
+                <div class="ad-mobile1">
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                    <!-- Videos Page Ad Unit -->
+                    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -396,6 +441,15 @@
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 6)</p>
                     </a>
+                </div>
+
+                <div class="ad-mobile1">
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                    <!-- Videos Page Ad Unit -->
+                    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </div>
 
                 <div class="video">
@@ -444,10 +498,10 @@
                 </div>
             </div>
         </section>
-        <section class="ad">
+        <section class="ad-desktop1">
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Home Page Ad Unit -->
+                <!-- Videos Page Ad Unit -->
                 <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
@@ -458,7 +512,7 @@
 
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Home Page Ad Unit -->
+                <!-- Videos Page Ad Unit -->
                 <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
@@ -469,7 +523,7 @@
 
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Home Page Ad Unit -->
+                <!-- Videos Page Ad Unit -->
                 <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
