--- a/Videos/Clix_Team_Selector_Chapter_3/index.html
+++ b/Videos/Clix_Team_Selector_Chapter_3/index.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
-    <script src="/js/video.js"></script>
+    <script src="/js/clix_team_selector_chapter_3.js"></script>
 
     <title>VukeFN | Videos</title>
 </head>
@@ -142,8 +142,10 @@
         </nav>
     </header>
 
-    <!-- ========== MAIN ========== -->
+    <!-- ============================== MAIN ============================== -->
     <main id="main">
+
+        <!-- ============================== DEVICES ============================== -->
         <section>
             <section class="devices-sec1" id="settings1">
                 <h2>Start Area</h2>
@@ -167,36 +169,28 @@
             </section>
         </section>
 
-        <!-- ========== SETTINGS ========== -->
+        <!-- ============================== SETTINGS MENU ============================== -->
         <section class="settings" id="settings">
-            <ul class="items">
+
+            <!-- ========== DEVICE SETTINGS ========== -->
+            <ul class="settings-list">
                 <li class="settings-title">
                     <h2>CUSTOMIZE</h2>
                     <span class="device-name">Trigger</span>
                 </li>
-
-                <li class="item">
-                    <h2>Activate On Game Start</h2>
-                    <span>yes</span>
-                </li>
-                <li class="item">
-                    <h2>Activate On Game Start</h2>
-                    <span>yes</span>
-                </li>
-                <li class="item">
-                    <h2>Activate On Game Start</h2>
-                    <span>yes</span>
-                </li>
-                <li class="item">
-                    <h2>Activate On Game Start</h2>
-                    <span>yes</span>
-                </li>
-                <li class="item">
-                    <h2>Activate On Game Start</h2>
-                    <span>yes</span>
-                </li>
             </ul>
 
+            <!-- ========== AD ========== -->
+            <section>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                <!-- Video Horizontal Ad Unit -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </section>
+
+            <!-- ========== SETTINGS BUTTONS ========== -->
             <div class="settings-buttons">
                 <div class="gear-btn" id="gear-btn" onclick="openGearPopup()">
                     <ion-icon name="settings-sharp"></ion-icon>
@@ -205,6 +199,7 @@
                 <div class="close cancel-btn">cancel</div>
             </div>
 
+            <!-- ========== GEAR POPUP ==========-->
             <div class="gear-popup" id="gear-popup">
                 <a>
                     <h3 class="mark-as-done-btn">Mark as done</h3>
@@ -218,8 +213,17 @@
             </div>
         </section>
 
-        <!-- ========== ISLAND SETTINGS ========== -->
+        <!-- ========== AD ========== -->
+        <section>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+            <!-- Video Horizontal Ad Unit -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </section>
 
+        <!-- ========== ISLAND SETTINGS ========== -->
         <section class="island-settings">
             <div class="tab">
                 <h2>Island Settings</h2>
@@ -236,7 +240,6 @@
     </main>
 
     <!-- ========== SCRIPTS ========== -->
-
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
