--- a/Videos/Clix_Team_Selector_Chapter_3/index.html
+++ b/Videos/Clix_Team_Selector_Chapter_3/index.html
@@ -184,7 +184,7 @@
             <section>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                 <!-- Video Horizontal Ad Unit -->
-                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <ins class="adsbygoogle ad-slot3" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
