Testing the Ads

--- a/Videos/index.html
+++ b/Videos/index.html
@@ -159,11 +159,11 @@
     <div id="lower-opacity" class="lower-opacity" onclick="closeSideBar()"></div>
 
     <main id="main">
-        <section class="ad-desktop1">
-            <div>
+        <section class="ad-container-desktop">
+            <div class="ad-wrapper-desktop">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                 <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot1" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -171,10 +171,10 @@
 
             <div class="extra"></div>
 
-            <div>
+            <div class="ad-wrapper-desktop">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                 <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot1" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -182,10 +182,10 @@
 
             <div class="extra"></div>
 
-            <div>
+            <div class="ad-wrapper-desktop">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                 <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot1" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -232,10 +232,10 @@
                     </a>
                 </div>
 
-                <div class="ad-mobile1">
+                <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                     <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot2" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -277,10 +277,10 @@
                     </a>
                 </div>
 
-                <div class="ad-mobile1">
+                <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                     <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot2" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -324,10 +324,10 @@
                     </a>
                 </div>
 
-                <div class="ad-mobile1">
+                <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                     <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot2" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -369,10 +369,10 @@
                     </a>
                 </div>
 
-                <div class="ad-mobile1">
+                <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                     <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot2" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -416,10 +416,10 @@
                     </a>
                 </div>
 
-                <div class="ad-mobile1">
+                <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                     <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot2" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -461,10 +461,10 @@
                     </a>
                 </div>
 
-                <div class="ad-mobile1">
+                <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                     <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot2" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -516,11 +516,11 @@
                 </div>
             </div>
         </section>
-        <section class="ad-desktop1">
-            <div>
+        <section class="ad-container-desktop">
+            <div class="ad-wrapper-desktop">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                 <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot1" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -528,10 +528,10 @@
 
             <div class="extra"></div>
 
-            <div>
+            <div class="ad-wrapper-desktop">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                 <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot1" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -539,10 +539,10 @@
 
             <div class="extra"></div>
 
-            <div>
+            <div class="ad-wrapper-desktop">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
                 <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot1" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
